--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blockoli",
-  "version": "2.0.16",
+  "version": "2.0.17",
   "description": "Brockoli is a block coding editor for Arduino.",
   "main": "main/main.js",
   "scripts": {
@@ -54,6 +54,8 @@
     "directories": {
       "output": "./dist/"
     },
-    "files": ["!.vscode${/*}"]
+    "files": [
+      "!.vscode${/*}"
+    ]
   }
 }
