--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@serialport/parser-readline": "^9.2.4",
     "electron-log": "^4.4.6",
     "electron-prompt": "^1.7.0",
+    "electron-updater": "^4.3.9",
     "iconv-lite": "^0.6.3",
-    "serialport": "^9.2.8",
-    "electron-updater": "^4.3.9"
+    "ini": "^3.0.0",
+    "object-path": "^0.11.8",
+    "serialport": "^9.2.8"
   },
   "build": {
     "productName": "Blockoli2",
